src/test/ui/feature-gate/allow-features.stderr
error[E0725]: the feature `rustc_const_unstable` is not in the list of allowed features
  --> $DIR/allow-features.rs:6:12
   |
LL | #![feature(rustc_const_unstable)]
   |            ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0725`.
